Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1401426: Adding event time defaults to first work hour
 - Fixed bug 1401537: 'German Date' not properly displayed at week.php
 - Fixed bug 1400836: patch for SQL errors in current CVS
 - Fixed bug 1400400: adding a task - header cannot be translated cpl.
 - Fixed bug 1365600: 'unapproved events' are not properly explained
 - Merged task files into entry files
 - Added option to upload category icons
 = Fixed bug 1365219: Highlighted "today" changes too early - v1.1.0-CVS
 - Fixed bug 1397766: Tomorrow Report fails to This Week
 - Fixed bug 1387646: Repeated events are not shown repeatedly
 - Fixed bug 1386705: Two errors in install scripts (PostgreSQL)
 - Added option to disable small months
 - Added Previews to themes
 - Fixed bug 1375089: Repeating evens miss final day of repeat
 - Fixed bug 1379707: Repeating event ends one day early
 - Imlemented PATCH 1380867: improved ical support
 - Fixed bug  1385557: calendar inputs can cause crash
 - Added feature to email ics attachment to external participants
   This address bug 1384838 and RFE 1384842
 - Fixed bug 1385433: External Users not deleted with event
 - Changed 'Display Weekends' to affect all pages
 - Added support for themes
 - Added support for IBM DB2
 - Added support for binary objects for MySQL and SQLite.  This includes
   new support for event attachements and event comments.
   (Still need to implement for other databases.)
 - Fixed vuln in layers: published vulnerability in layers_toggle.php
   was fixed
 - Fixed bug 1370871: public access - preferences cannot be saved
 - Fixed bug 1366113: Accept/reject Missing
 - Fixed problem with dates in nonuser calendar if LANGAUGE_DEFINED
 - Fixed bug 1369715: Event for groups hangs - javascript error perhaps
 - Fixed bug 1368071: category pop-up for tasks will not work properly
 - Fixed vulnerablity: SQL injection possible in edit_template.php,